--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.0.2",
     "@tailwindcss/vite": "^4.1.4",
+    "axios": "^1.9.0",
     "lucide": "^0.507.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
