--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "@mui/material": "^7.0.2",
     "@tailwindcss/vite": "^4.1.4",
     "axios": "^1.9.0",
+    "bcrypt": "^6.0.0",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "lucide": "^0.507.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
